--- a/vue-frontend/conf/nginx.conf
+++ b/vue-frontend/conf/nginx.conf
@@ -4,7 +4,7 @@ server {
   server_name _;
 
   location /api/ {
-    proxy_pass http://backend/;
+    proxy_pass http://backend-prod/;
   }
 
   location / {
