--- a/composers/dev_docker-compose.yaml
+++ b/composers/dev_docker-compose.yaml
@@ -1,6 +1,14 @@
 name: vue-dev
 
 services:
+  mongodb-dev:
+    image: "mongo"
+    volumes:
+      - data:/data/db:rw
+    container_name: mongodb-dev
+    env_file:
+      - ../backend/env/.env.mongodb-dev
+
   backend-dev:
     image: planterson/vue-backend-dev
     container_name: vue-backend-dev
@@ -12,21 +20,26 @@ services:
     env_file:
       - ../backend/env/.env.dev
     volumes:
-      - ../backend/server.js:/backend/server.js:ro
+      - ../backend/src:/backend/src:ro
+    depends_on:
+      - mongodb-dev
     entrypoint: ["npm", "run", "dev"]
 
   frontend-dev:
     image: planterson/vue-frontend-dev
     container_name: vue-frontend-dev
     build:
-      context: ../vue-frontend/
+      context: ../frontend/
       dockerfile: dockerfiles/Dockerfile.dev
     ports:
       - "5173:5173"
     env_file:
-      - ../vue-frontend/env/.env.local
+      - ../frontend/env/.env.local
     volumes:
-      - ../vue-frontend/src/:/frontend/src:ro
+      - ../frontend/src/:/frontend/src:ro
     stdin_open: true
     tty: true
     entrypoint: ["npm", "run", "dev"]
+
+volumes:
+  data:
