--- a/backend/composers/prod_docker-compose.yaml
+++ b/backend/composers/prod_docker-compose.yaml
@@ -1,5 +1,13 @@
 name: vue-prod
 services:
+  mongodb-prod:
+    image: "mongo"
+    volumes:
+      - data-prod:/data/db:rw
+    container_name: mongodb-prod
+    env_file:
+      - ../env/.env.mongodb-prod
+
   backend-prod:
     image: planterson/vue-backend-prod
     container_name: vue-backend-prod
@@ -8,8 +16,12 @@ services:
       context: ../
       dockerfile: dockerfiles/Dockerfile.prod
     env_file:
-      - ../env/prod.env
+      - ../env/.env.prod
     # ports:
     #   - 80:80
+    depends_on:
+      - mongodb-prod
     entrypoint: [ "npm", "start" ]
-    
+
+volumes:
+  data-prod:
