--- a/backend/composers/dev_docker-compose.yaml
+++ b/backend/composers/dev_docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   mongodb-dev:
     image: "mongo"
     volumes:
-      - data:/data/db:rw
+      - data-dev:/data/db:rw
     container_name: mongodb-dev
     env_file:
       - ../env/.env.mongodb-dev
@@ -26,4 +26,4 @@ services:
     entrypoint: ["npm", "run", "dev"]
 
 volumes:
-  data:
+  data-dev:
