Add multi-stage dockerfiles

--- a/backend/composers/dev_docker-compose.yaml
+++ b/backend/composers/dev_docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     container_name: vue-backend-dev
     build:
       context: ../
-      dockerfile: dockerfiles/Dockerfile.dev
+      target: development
     ports:
       - 5000:5000
     env_file:
