--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:alpine
-
+FROM node:alpine as base
 WORKDIR /backend/
-
 COPY package.json .
-
 RUN npm install
-
 COPY src .
 
+FROM base as development
 EXPOSE 5000
-
 ENTRYPOINT [ "npm", "run", "dev" ]
+
+FROM base as production
+ENTRYPOINT [ "npm", "start" ]
