--- a/composers/dev_docker-compose.yaml
+++ b/composers/dev_docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     container_name: vue-backend-dev
     build:
       context: ../backend/
-      dockerfile: dockerfiles/Dockerfile.dev
+      target: development
     ports:
       - 5000:5000
     env_file:
@@ -30,7 +30,7 @@ services:
     container_name: vue-frontend-dev
     build:
       context: ../frontend/
-      dockerfile: dockerfiles/Dockerfile.dev
+      target: development
     ports:
       - "5173:5173"
     env_file:
