--- a/frontend/composers/dev_docker-compose.yaml
+++ b/frontend/composers/dev_docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: vue-frontend
     build:
       context: ../
-      dockerfile: dockerfiles/Dockerfile.dev
+      target: development
     ports:
       - "5173:5173"
     env_file:
