--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,7 @@ RUN npm run build
 FROM nginx as production
 COPY --from=build /app/dist/ /usr/share/nginx/html/
 COPY conf/nginx.conf /etc/nginx/conf.d/default.conf
+COPY conf/ssl.conf /etc/nginx/ssl.conf
 EXPOSE 80
 
 CMD [ "nginx", "-g", "daemon off;" ]
