--- a/frontend/conf/nginx.conf
+++ b/frontend/conf/nginx.conf
@@ -1,10 +1,13 @@
 server {
-  listen 80 default_server;
-  
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  include ssl.conf;
   server_name _;
 
+  client_max_body_size 0;
+
   location /api/ {
-    proxy_pass http://backend-prod/;
+    proxy_pass https://backend-prod/;
   }
 
   location / {
@@ -14,4 +17,11 @@ server {
   }
 
   include /etc/nginx/extra-conf.d/*.conf;
+}
+
+server {
+  listen 80;
+  listen [::]:80;
+  server_name localhost;
+  return 302 https://$server_name$request_uri;
 }
