--- a/composers/prod_docker-compose.yaml
+++ b/composers/prod_docker-compose.yaml
@@ -28,7 +28,7 @@ services:
   frontend-prod:
       container_name: frontend-prod
       hostname: frontend
-      image: planterson/vue-frontend
+      image: planterson/vue-frontend-prod
       build:
         context: ../frontend
         target: production
