--- a/frontend/composers/prod_docker-compose.yaml
+++ b/frontend/composers/prod_docker-compose.yaml
@@ -14,6 +14,6 @@ services:
       tty: true
       volumes:
         - ../dhparam.pem:/etc/nginx/dhparam.pem:ro
-        - ../nginx.crt:/etc/ssl/certs/neginx.crt:ro
+        - ../nginx.crt:/etc/ssl/certs/nginx.crt:ro
         - ../nginx.key:/etc/ssl/private/nginx.key:ro
       entrypoint: [ "nginx", "-g", "daemon off;" ]
