--- a/composers/dev_docker-compose.yaml
+++ b/composers/dev_docker-compose.yaml
@@ -3,6 +3,8 @@ name: vue-dev
 services:
   mongodb-dev:
     image: "mongo"
+    ports:
+      - 27017:27017
     volumes:
       - data-dev:/data/db:rw
     container_name: mongodb-dev
