--- a/frontend/composers/dev_docker-compose.yaml
+++ b/frontend/composers/dev_docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - ../env/.env.local
     volumes:
       - ../src/:/frontend/src:ro
+      - ../index.html:/frontend/index.html:ro
     stdin_open: true
     tty: true
     entrypoint: ["npm", "run", "dev"]
